WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
172576
ASSERTION FAILED: !needsStyleRecalc() || !document().childNeedsStyleRecalc()
https://bugs.webkit.org/show_bug.cgi?id=172576
Summary
ASSERTION FAILED: !needsStyleRecalc() || !document().childNeedsStyleRecalc()
alan
Reported
2017-05-24 21:05:46 PDT
LayoutTest/http/tests/navigation/keyboard-events-during-provisional-subframe-navigation.html
rdar://problem/32181979
Attachments
Patch
(1.84 KB, patch)
2017-05-24 22:12 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Patch
(1.85 KB, patch)
2017-05-25 08:00 PDT
,
alan
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews126 for ios-simulator-wk2
(11.95 MB, application/zip)
2017-05-25 09:44 PDT
,
Build Bot
no flags
Details
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2017-05-24 22:12:13 PDT
Created
attachment 311198
[details]
Patch
alan
Comment 2
2017-05-25 08:00:56 PDT
Created
attachment 311222
[details]
Patch
Brent Fulgham
Comment 3
2017-05-25 08:58:23 PDT
Comment on
attachment 311222
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=311222&action=review
> Source/WebCore/page/FocusController.cpp:383 > + owner.contentFrame()->document()->updateLayoutIgnorePendingStylesheets();
It seems like moving the "owner.contentFrame()->document()" test here would prevent this patch from changing behavior for cases where there is no document. Was it wrong in the existing code that frames without documents were running the remainder of this function? If not, this change seems to do more than ensure that the layout is updated.
Build Bot
Comment 4
2017-05-25 09:44:11 PDT
Comment on
attachment 311222
[details]
Patch
Attachment 311222
[details]
did not pass ios-sim-ews (ios-simulator-wk2): Output:
http://webkit-queues.webkit.org/results/3814731
New failing tests: fast/events/before-unload-returnValue.html compositing/masks/compositing-clip-path-change-no-repaint.html fast/css/target-fragment-match.html
Build Bot
Comment 5
2017-05-25 09:44:13 PDT
Created
attachment 311232
[details]
Archive of layout-test-results from ews126 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews126 Port: ios-simulator-wk2 Platform: Mac OS X 10.12.5
alan
Comment 6
2017-05-25 09:45:56 PDT
(In reply to Build Bot from
comment #4
)
> Comment on
attachment 311222
[details]
> Patch > >
Attachment 311222
[details]
did not pass ios-sim-ews (ios-simulator-wk2): > Output:
http://webkit-queues.webkit.org/results/3814731
> > New failing tests: > fast/events/before-unload-returnValue.html > compositing/masks/compositing-clip-path-change-no-repaint.html > fast/css/target-fragment-match.html
They look unrelated.
WebKit Commit Bot
Comment 7
2017-05-25 12:22:24 PDT
Comment on
attachment 311222
[details]
Patch Clearing flags on attachment: 311222 Committed
r217441
: <
http://trac.webkit.org/changeset/217441
>
WebKit Commit Bot
Comment 8
2017-05-25 12:22:25 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug