ASSERTION FAILED: !needsStyleRecalc() || !document().childNeedsStyleRecalc() https://bugs.webkit.org/show_bug.cgi?id=172576 <rdar://problem/32181979>

Reviewed by Brent Fulgham.

Ensure that we clean the subframe's document before start searching for a focusable element.

Covered by existing test.

* page/FocusController.cpp:
(WebCore::FocusController::findFocusableElementDescendingDownIntoFrameDocument):


Canonical link: https://commits.webkit.org/189505@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@217441 268f45cc-cd09-0410-ab3c-d52691b4dbfc